Just checking out how Git will work with github once i update locally

--- a/404.html
+++ b/404.html
@@ -153,5 +153,8 @@
             </script>
             <script src="//linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>
         </div>
+		<div>
+		Viral added something else
+		</div>
     </body>
 </html>
