Adding copyright notice

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+
+<!-- adding Copyright notice -->
 <head>
 	<title>Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
