Updating to copytight 2 since i goofed the first one up ... lol

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<!-- adding Copyright notice -->
+<!-- adding Copyright notice 2-->
 <head>
 	<title>Example Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
