Changes in the master

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 
 <!-- adding Copyright notice 2-->
 <head>
-	<title>Example Website</title>
+	<title>Yral Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -20,7 +20,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>Yral Company 2014 -- This change is done on master branch</p>
 	</footer>
 </body>
 </html>
