updates before rebase conflicts

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 
-<!-- adding Copyright notice 2-->
+<!-- adding Copyright notice 2
+Adding changes before rebasing conflicts
+
+-->
 <head>
 	<title>Yral Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
