adding trouble to simplehtml

--- a/simple.html
+++ b/simple.html
@@ -3,9 +3,11 @@
 <!-- adding Copyright notice 2
 Adding changes before rebasing conflicts
 
+Adding conflicts from bigtrouble branch
+
 -->
 <head>
-	<title>Conflicting changes in the master branch after switch back to master from rebase</title>
+	<title>Yral Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -19,7 +21,7 @@ Adding changes before rebasing conflicts
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content. asjdkasnd
 		</p>
 	</main>
 	<footer class="container">
