adding more trouble from the master once again

--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@ Adding changes before rebasing conflicts
 
 -->
 <head>
-	<title>Yral Website</title>
+	<title>Conflicting changes in the master branch after switch back to master from rebase</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -23,7 +23,7 @@ Adding changes before rebasing conflicts
 		</p>
 	</main>
 	<footer class="container">
-		<p>Yral Company 2014 -- This change is done on master branch</p>
+		<p>Yral Company 2014 -- This change is done on master branch. NO really</p>
 	</footer>
 </body>
 </html>
