local commit : Updating simple.html

--- a/simple.html
+++ b/simple.html
@@ -21,7 +21,8 @@ Adding conflicts from bigtrouble branch
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content. asjdkasnd
+			Edit
+		
 		</p>
 	</main>
 	<footer class="container">
