--- a/simple.html
+++ b/simple.html
@@ -7,7 +7,7 @@ Adding conflicts from bigtrouble branch
 
 -->
 <head>
-	<title>Yral Stashing</title>
+	<title>Yral Stashing 2</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
